--- a/custom_components/esb_faults/manifest.json
+++ b/custom_components/esb_faults/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "esb_faults",
   "name": "ESB Faults",
+  "version": "1.0.0",
   "codeowners": ["@jasonmadigan"],
   "config_flow": true,
   "dependencies": [],
