--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,8 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install poetry
-        poetry install
+        pip install -r requirements_dev.txt
     - name: Test with pytest
       run: |
-        poetry run pytest
+         pytest -p no:sugar
