--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,7 @@
-aiohttp==3.8.5
-homeassistant==2023.6.0
+aiohttp==3.9.5
+homeassistant==2024.6.1
 pytest
-pytest-homeassistant-custom-component==0.13.36
+pytest-homeassistant-custom-component==0.13.133
 pytest-aiohttp
-requests==2.31.0
+requests>=2.31.0,<3.0.0
 geopy==2.3.0
