--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,7 @@
 aiohttp==3.9.5
 homeassistant==2024.6.1
-pytest
-pytest-homeassistant-custom-component==0.13.133
-pytest-aiohttp
+pytest==7.2.0
+pytest-homeassistant-custom-component==0.12.22
+pytest-aiohttp==1.0.4
 requests>=2.31.0,<3.0.0
 geopy==2.3.0
